# xings-date-time

./: .gitignore  NEWS.md  README.md  autogen.sh  configure.ac
.github/: FUNDING.yml
data/: Makefile.am  xdt-datetime-dialog.ui  xdt-panel.ui  xdt-timezone-dialog.ui  xings-date-time.desktop.in
data/appdata/: Makefile.am  org.xings.DateTime.metainfo.xml.in
man/: Makefile.am  xings-date-time.sgml
po/: POTFILES.in  es.po
src/: Makefile.am  xdt-common.c  xdt-common.h  xdt-datetime-dialog.c  xdt-datetime-dialog.h  xdt-dbus.c  xdt-dbus.h  xdt-debug.c  xdt-debug.h  xdt-panel.c  xdt-panel.h  xdt-timezone-dialog.c  xdt-timezone-dialog.h  xings-date-time.c
